# DIT143

./: .envrc  .gitignore  CHANGELOG.md  DIT143.cabal  README.md  playground.hs
.github/workflows/: haskell.yaml
src/: Lab1.hs  PLayground.hs
src/Lab1/: Lab1.hs
src/Lab2/: BlackJack.hs  Cards.hs  Main.hs  RunGame.hs
src/Lab3/: Sudoku.hs
src/Lab3/assets/: broken_sudoku.su  test_sudoku.su
src/Lab4/: Calculator.hs  Expr.hs  Main.hs  Parsing.hs  ThreepennyPages.hs
src/Lab5/: Guesser.hs  Lab5.hs  Main.hs
test/: Lab1Test.hs  Lab2Test.hs  Lab3Test.hs  PlaygroundTest.hs
test/Lab2/: Lab2Test.hs
test/Lab3/: Lab3Test.hs
test/Lab4/: Lab4Test.hs
