cabal-version:      3.0
name:               DIT143
version:            0.1.0.0
synopsis:           Content of the course "DIT143 - Functional Programming"
description:        This package contains the content of the course "DIT143 - Functional Programming" offered at the University of Gothenburg. The package is divided into labs, each of which is a self-contained Haskell project.
license:            MIT
license-file:       LICENSE
author:             Giacomo Guidotto
maintainer:         giacomo.guidotto@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:  Playground,
    build-depends:
        base ^>= 4.17.2.1,
        random ^>= 1.2,
        hlint >=3.3,

test-suite playground-test
    import:           warnings
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          PlaygroundTest.hs
    build-depends:
        base ^>= 4.17.2.1,
        DIT143

-- Lab 1

library lab1
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src/Lab1
    exposed-modules:  Lab1,
    build-depends:
        base ^>= 4.17.2.1,

test-suite lab1-test
    import:           warnings
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test/Lab1
    main-is:          Lab1Test.hs
    build-depends:
        base ^>= 4.17.2.1,
        QuickCheck >= 2.14,
        lab1

-- Lab 2

library lab2
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src/Lab2
    exposed-modules:  BlackJack,
                      Cards,
                      RunGame,
    build-depends:
        base ^>= 4.17.2.1,
        random ^>= 1.2,
        QuickCheck >= 2.14,

test-suite lab2-test
    import:           warnings
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test/Lab2
    main-is:          Lab2Test.hs
    build-depends:
        base ^>= 4.17.2.1,
        QuickCheck >= 2.14,
        lab2

executable blackjack
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src/Lab2
    main-is:          Main.hs
    other-modules:    BlackJack,
                      Cards,
                      RunGame,
    build-depends:
        base ^>= 4.17.2.1,
        random ^>= 1.2,
        QuickCheck >= 2.14,
        lab2,

-- Lab 3

library lab3
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src/Lab3
    exposed-modules:  Sudoku,
    build-depends:
        base ^>= 4.17.2.1,
        QuickCheck >= 2.14,

test-suite lab3-test
    import:           warnings
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test/Lab3
    main-is:          Lab3Test.hs
    build-depends:
        base ^>= 4.17.2.1,
        QuickCheck >= 2.14,
        lab3

-- Lab 4 (WIP)

library lab4
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src/Lab4
    exposed-modules:  Expr,
                      Calculator,
                      Parsing,
                      ThreepennyPages,
    build-depends:
        base ^>= 4.17.2.1,
        QuickCheck >= 2.14,
        aeson ^>= 2.2.3.0,
        threepenny-gui ^>= 0.9.4.1,

test-suite lab4-test
    import:           warnings
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test/Lab4
    main-is:          Lab4Test.hs
    build-depends:
        base ^>= 4.17.2.1,
        QuickCheck >= 2.14,
        lab4

executable calculator
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   src/Lab4
    main-is:          Main.hs
    other-modules:    Expr,
                      Calculator,
                      Parsing,
                      ThreepennyPages
    build-depends:
        base ^>= 4.17.2.1,
        QuickCheck >= 2.14,
        aeson ^>= 2.2.3.0,
        threepenny-gui ^>= 0.9.4.1,
        lab4
